spacing fix

--- a/src/Tabs/Home.module.css
+++ b/src/Tabs/Home.module.css
@@ -15,3 +15,10 @@
     letter-spacing: -0.03em;
     color: rgba(0, 0, 0, 0.8);
 } */
+
+
+@media  (min-width: 1792px)and (min-height: 1010px) {
+  .lastMesssage{
+    margin-bottom: 105px;
+  }
+}
